UIIN-1385 provide missing item statuses (#1254)
Some item statuses available in the mod-inventory-storage enum were not
part of the list in the UI. This would cause the UI to crash when
displaying the details record of any such item. It appears that stories
to add these missing status were filed (e.g. UIIN-756, UIIN-938) but
were not unblocked when the backend work was completed. And/or, it was
not clear what impact that backend work would have.

Fixes UIIN-1385

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -469,18 +469,24 @@
   "item.status.awaitingPickup": "Awaiting pickup",
   "item.status.awaitingDelivery": "Awaiting delivery",
   "item.status.checkedOut": "Checked out",
+  "item.status.claimedReturned": "Claimed returned",
+  "item.status.declaredLost": "Declared lost",
   "item.status.inProcess": "In process",
+  "item.status.inProcessNonRequestable": "In process (non-requestable)",
   "item.status.inTransit": "In transit",
-  "item.status.inTransitTo": "In transit to {servicePoint}",
+  "item.status.intellectualItem": "Intellectual item",
+  "item.status.longMissing": "Long missing",
+  "item.status.lostAndPaid": "Lost and paid",
   "item.status.missing": "Missing",
   "item.status.onOrder": "On order",
   "item.status.paged": "Paged",
-  "item.status.declaredLost": "Declared lost",
+  "item.status.restricted": "Restricted",
   "item.status.orderClosed": "Order closed",
+  "item.status.unavailable": "Unavailable",
+  "item.status.unknown": "Unknown",
   "item.status.withdrawn": "Withdrawn",
-  "item.status.claimedReturned": "Claimed returned",
-  "item.status.lostAndPaid": "Lost and paid",
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
+  "item.status.inTransitTo": "In transit to {servicePoint}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
   "saveInstancesUIIDS.info": "Request to save instances UUIDs has been received. File download may take a few minutes.",
