UIIN-1382: Implement quick export of instances in MARC Bib output format

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -154,7 +154,6 @@
   "hridHandling.validation.assignPrefixField": "Please enter an alphanumeric value",
   "hridHandling.toast.updated": "Setting was successfully updated.",
   "hridHandling.toast.notUpdated": "Setting was NOT updated.",
-  "hridHandling.toast.error": "Server communication problem. Please try again",
   "hridHandling.modal.header": "Are you sure?",
   "hridHandling.modal.body": "WARNING: Changing the HRID setting may create conflicts if records already exist in Inventory.",
   "hridHandling.modal.button.close": "Close without saving",
@@ -466,6 +465,7 @@
   "folio": "FOLIO",
   "marc": "MARC",
   "unknownNoteType": "Unknown note type",
+  "communicationProblem": "Server communication problem. Please try again",
   "item.status": "Item status",
   "item.status.agedToLost": "Aged to lost",
   "item.status.available": "Available",
