UIIN-1375: Add show selected records action menu

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -6,6 +6,8 @@
   "instances.columns.publishers": "Publishers",
   "instances.columns.relation": "Relation",
   "instances.rows.select": "Select instance",
+  "instances.showSelectedRecords": "Show selected records",
+  "instances.selectedRecords": "Selected records",
   "instances.rows.recordsSelected": "{count, number} {count, plural, one {record} other {records}} selected",
   "instances.resourceType": "Resource Type",
   "instances.language": "Language",
@@ -37,6 +39,7 @@
   "code": "code",
   "duplicateInstance": "Duplicate",
   "save": "Save",
+  "saveAndClose": "Save & close",
   "cancel": "Cancel",
   "confirm": "Confirm",
   "newInstance": "New instance",
