Update to match changed nod-copycat API
This relates to externally visible changes made to mod-copycat in
[pull-request 18](https://github.com/folio-org/mod-copycat/pull/18/files)

Interface names:
* Interface name `copycat-targetprofiles` changed to `copycat-profiles`

WSAPI paths:
* Path `/copycat/target-profiles` changed to `/copycat/profiles`
* Path `/copycat/target-profiles/{id}` changed to `/copycat/profiles/{id}`

Permissions names:
* Permission name `copycat.target-profiles.item.post` changed to `copycat.profiles.item.post`
* Permission name `copycat.target-profiles.collection.get` changed to `copycat.profiles.collection.get`
* Permission name `copycat.target-profiles.item.get` changed to `copycat.profiles.item.get`
* Permission name `copycat.target-profiles.item.put` changed to `copycat.profiles.item.put`
* Permission name `copycat.target-profiles.item.delete` changed to `copycat.profiles.item.delete`

Schema elements
* In `copycatimports.json`, `targetProfileId` renamed `profileId`
* In `copycatimports.json`, `record` added (to contain MARC record)
* In `copycatimports.json`, `externalIdentifier` made mandatory
* In `copycattargetcollection.json`, `targetprofiles` renamed `profiles`
* In `copycattargetprofile.json`, `importProfileId` renamed `jobProfileId`
* In `copycattargetprofile.json`, `url` and `externalIdQueryMap` are no longer mandatory

(Raml type names and JSON Schema file names have also changed, but these do not affect the client code.)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -286,7 +286,7 @@
   "authentication": "Authentication",
   "externalIdQueryMap": "External ID query map",
   "internalIdEmbedPath": "Internal ID embed path",
-  "importProfileId": "Import profile ID",
+  "jobProfileId": "Job profile ID",
   "urls": "URLs",
   "addUrl": "Add URL",
   "items": "Items",
