Add copycat.import translation

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -612,5 +612,6 @@
   "moveItems.modal.message.items": "{count, number} {count, plural, one {item} other {items}} will be moved to {targetName}",
 
   "filter.tags": "Tags",
-  "showTags": "Show tags"
+  "showTags": "Show tags",
+  "copycat.import": "Import"
 }
