--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -613,5 +613,7 @@
 
   "filter.tags": "Tags",
   "showTags": "Show tags",
-  "copycat.import": "Import"
+  "copycat.import": "Import",
+  "copycat.idToImport": "ID to import",
+  "copycat.externalIdentifier": "External identifier"
 }
