--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -589,7 +589,8 @@
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.settings.list.view": "Settings (Inventory): Display list of settings pages",
   "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn",
-
+  "permission.items.mark-intellectual-item": "Inventory: Mark items intellectual item",
+  
   "moveItems.moveButton": "Move to",
   "moveItems.selectAll": "Select/unselect all items for movement",
   "moveItems.selectItem": "Select/unselect item for movement",
