Support re-importing an existing record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -614,6 +614,7 @@
   "filter.tags": "Tags",
   "showTags": "Show tags",
   "copycat.import": "Import",
+  "copycat.reimport": "Re-import",
   "copycat.idToImport": "ID to import",
   "copycat.externalIdentifier": "External identifier"
 }
