UIIN 1321 Allow remote storage locations to be changed to non-remote storage location (#1287)
* fix Jest catching /test/ui-testing/test.js

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -442,9 +442,14 @@
   "newRequest": "New Request",
   "fastAdd": "Fast add",
   "newFastAddRecord": "New Fast Add Record",
-  "confirmLocation.selectBtn": "Select",
-  "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
-  "confirmLocation.header": "Inactive location",
+  "location.confirm.confirmBtn": "Yes",
+  "location.confirm.common.header": "Attention!",
+  "location.confirm.header": "Inactive location",
+  "location.confirm.inactive.message": "This location has a status of inactive. Are you sure you want to select this location?",
+  "location.confirm.removeFromRemote.header": "Removing from remote storage",
+  "location.confirm.removeFromRemote.message": "Are you sure you want to remove this item from remote storage?",
+  "location.item.removeFromRemote.warning": "To remove this item from remote storage, run an exception report or communicate this directly to your remote storage location.",
+  "location.holdings.removeFromRemote.warning": "To remove this item from remote storage, run an exception report or communicate this directly to your remote storage location. This includes {itemCount, plural, =0 {<strong>no</strong> titles} one {<strong>#</strong> title} other {<strong>#</strong> titles}}.",
   "contributorType": "Contributor type",
   "contributorTypes": "Contributor types",
   "instanceStatusTypes": "Instance status types",
@@ -592,7 +597,7 @@
   "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn",
   "permission.items.mark-intellectual-item": "Inventory: Mark items intellectual item",
   "permission.items.mark-restricted": "Inventory: Mark items restricted",
-  
+
   "moveItems.moveButton": "Move to",
   "moveItems.selectAll": "Select/unselect all items for movement",
   "moveItems.selectItem": "Select/unselect item for movement",
