Internationalization for import-record reporting

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -629,5 +629,9 @@
   "copycat.import": "Import",
   "copycat.reimport": "Re-import",
   "copycat.idToImport": "ID to import",
-  "copycat.externalIdentifier": "External identifier"
+  "copycat.externalIdentifier": "External identifier",
+  "copycat.callout.updated": "Updated record {xid}",
+  "copycat.callout.created": "Created record {xid}",
+  "copycat.callout.simpleError": "Something went wrong: {err}",
+  "copycat.callout.complexError": "Something went wrong: {err}: {detail}"
 }
