UIIN-1404 etc. Single-record copy-cataloging support (#1294)
* Add support for maintaining copy-cataloguing profiles in the settings area. Towards UIIN-1401. Entails adding new interface `copycat-profiles`.
* Add support for importing MARC records from external Z39.50 sources. Towards UUIN-1317 and UUIN-1318. Entails adding new interface `copycat-imports`.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -286,6 +286,10 @@
   "querySearch": "Query search",
   "addSubject": "Add subject",
   "url": "URL",
+  "authentication": "Authentication",
+  "externalIdQueryMap": "External ID query map",
+  "internalIdEmbedPath": "Internal ID embed path",
+  "jobProfileId": "Job profile ID",
   "urls": "URLs",
   "addUrl": "Add URL",
   "items": "Items",
@@ -621,5 +625,13 @@
   "showTags": "Show tags",
 
   "actions": "Actions",
-  "showColumns": "Show columns"
+  "showColumns": "Show columns",
+  "copycat.import": "Import",
+  "copycat.reimport": "Re-import",
+  "copycat.idToImport": "ID to import",
+  "copycat.externalIdentifier": "External identifier",
+  "copycat.callout.updated": "Updated record {xid}",
+  "copycat.callout.created": "Created record {xid}",
+  "copycat.callout.simpleError": "Something went wrong: {err}",
+  "copycat.callout.complexError": "Something went wrong: {err}: {detail}"
 }
