--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -559,6 +559,7 @@
   "precedingField.connected": "Connected",
 
   "editInstanceMarc": "Edit in quickMARC",
+  "duplicateInstanceMarc": "Duplicate MARC bibliographic record",
   "quickMarcNotAvailable": "No plugin available!",
 
   "permission.all-permissions.TEMPORARY": "Inventory: All permissions",
