--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -290,6 +290,8 @@
   "externalIdQueryMap": "External ID query map",
   "internalIdEmbedPath": "Internal ID embed path",
   "jobProfileId": "Job profile ID",
+  "externalIdentifierType": "External identifier type",
+  "enabled": "Enabled",
   "urls": "URLs",
   "addUrl": "Add URL",
   "items": "Items",
