Inventory app now degrades gracefully in the absence of mod-copycat
Fixes UIIN-1428.

Also, some wording changes as requested by Ann-Marie.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -300,9 +300,9 @@
   "selectCallNumberType": "Select type",
   "holdingsItems": "Holdings, Items",
   "integrations": "Integrations",
-  "singleRecordImport": "Single Record Import",
-  "targetProfiles": "Target profiles",
-  "targetProfile": "target profile",
+  "singleRecordImport": "Single record import",
+  "targetProfiles": "Z39.50 target profiles",
+  "targetProfile": "Z39.50 target profile",
   "addNewItemDialog": "Add new item dialog",
   "parentInstances": "Parent instances",
   "addParentInstance": "Add parent instance",
@@ -635,10 +635,10 @@
   "actions": "Actions",
   "showColumns": "Show columns",
   "copycat.import": "Import",
-  "copycat.reimport": "Re-import",
+  "copycat.reimport": "Overlay",
   "copycat.idToImport": "ID to import",
   "copycat.enterIdentifier": "Enter {identifierName} identifier",
-  "copycat.enterIdentifierForUpdate": "Enter the {identifierName} identifier to be used to overlay the current MARC data",
+  "copycat.enterIdentifierForUpdate": "Enter the {identifierName} identifier to be used to overlay the current data",
   "copycat.callout.updated": "Updated record {xid}",
   "copycat.callout.created": "Created record {xid}",
   "copycat.callout.simpleError": "Something went wrong: {err}",
