--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -452,10 +452,6 @@
   "location.confirm.common.header": "Attention!",
   "location.confirm.inactive.header": "Inactive location",
   "location.confirm.inactive.message": "This location has a status of inactive. Are you sure you want to select this location?",
-  "location.confirm.removeFromRemote.header": "Removing from remote storage",
-  "location.confirm.removeFromRemote.message": "Are you sure you want to remove this item from remote storage?",
-  "location.item.removeFromRemote.warning": "To remove this item from remote storage, run an exception report or communicate this directly to your remote storage location.",
-  "location.holdings.removeFromRemote.warning": "To remove this item from remote storage, run an exception report or communicate this directly to your remote storage location. This includes {itemCount, plural, =0 {<strong>no</strong> titles} one {<strong>#</strong> title} other {<strong>#</strong> titles}}.",
   "contributorType": "Contributor type",
   "contributorTypes": "Contributor types",
   "instanceStatusTypes": "Instance status types",
@@ -642,5 +638,12 @@
   "copycat.callout.updated": "Updated record {xid}",
   "copycat.callout.created": "Created record {xid}",
   "copycat.callout.simpleError": "Something went wrong: {err}",
-  "copycat.callout.complexError": "Something went wrong: {err}: {detail}"
+  "copycat.callout.complexError": "Something went wrong: {err}: {detail}",
+
+  "Removing from remote storage": "Removing from remote storage",
+  "Are you sure you want to remove {something} from remote storage?": "Are you sure you want to remove {something} from remote storage?",
+  "To remove {something} from remote storage...": "To remove {something} from remote storage, run an exception report or communicate this directly to your remote storage location.",
+  "This includes {count} titles": "This includes {count, plural, =0 {<strong>no</strong> titles} one {<strong>#</strong> title} other {<strong>#</strong> titles}}.",
+  "the holdings": "the holdings",
+  "{count} items": "{count, plural, one {this item} other {<strong>#</strong> items}}"
 }
