--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -640,10 +640,10 @@
   "copycat.callout.simpleError": "Something went wrong: {err}",
   "copycat.callout.complexError": "Something went wrong: {err}: {detail}",
 
-  "Removing from remote storage": "Removing from remote storage",
-  "Are you sure you want to remove {something} from remote storage?": "Are you sure you want to remove {something} from remote storage?",
-  "To remove {something} from remote storage...": "To remove {something} from remote storage, run an exception report or communicate this directly to your remote storage location.",
-  "This includes {count} titles": "This includes {count, plural, =0 {<strong>no</strong> titles} one {<strong>#</strong> title} other {<strong>#</strong> titles}}.",
-  "the holdings": "the holdings",
-  "{count} items": "{count, plural, one {this item} other {<strong>#</strong> items}}"
+  "remote.confirmation.heading": "Removing from remote storage",
+  "remote.confirmation.message": "Are you sure you want to remove {something} from remote storage?",
+  "remote.warning.common": "To remove {something} from remote storage, run an exception report or communicate this directly to your remote storage location.",
+  "remote.warning.titles": "This includes {count, plural, =0 {<strong>no</strong> titles} one {<strong>#</strong> title} other {<strong>#</strong> titles}}.",
+  "remote.holdings": "the holdings",
+  "remote.items": "{count, plural, one {this item} other {<strong>#</strong> items}}"
 }
