Improved settings page for single-record-import profiles (#1321)
* Support targetOptions in single-record-import settings
* Display details of target profiles
* First working <EntryList>-based editor
* Allow all copycat-profile fields to be edited
* Dropdown for selecting the identifier-type
* Display copycat settings only when the optional interface is present
* Change-logging for UIIN-1437
* Pass `type="checkbox"` to `<Field>` of type `Checkbox`. No-one knows why this is necessary, but it is. In its absence, a warning is emitted in the JavaScript console. Adding it allows the form library to correctly set the initial state, and means we no longer need to explicitly say `defaultChecked={initialValues?.enabled}`
* Cope gracefully when no copycat profiles are enabled
* Show enabled status for each copycat profile in settings

This last is done by generating a dummy `displayName` field and nominating it for <EntryList> to use with `nameKey="displayName"`, then removing it from the `initialValues` in the editing form so it doesn't get submitted as part of the updated record.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -290,6 +290,7 @@
   "externalIdQueryMap": "External ID query map",
   "internalIdEmbedPath": "Internal ID embed path",
   "jobProfileId": "Job profile ID",
+  "targetOptions": "Target options",
   "externalIdentifierType": "External identifier type",
   "enabled": "Enabled",
   "urls": "URLs",
@@ -559,6 +560,7 @@
   "precedingField.title": "Title",
   "precedingField.notConnected": "Not connected",
   "precedingField.connected": "Connected",
+  "confirmDirtyNavigate": "Form has unsaved changes. Are you sure you want to leave?",
 
   "editInstanceMarc": "Edit in quickMARC",
   "duplicateInstanceMarc": "Duplicate MARC bibliographic record",
@@ -636,7 +638,7 @@
   "showColumns": "Show columns",
   "copycat.import": "Import",
   "copycat.reimport": "Overlay",
-  "copycat.idToImport": "ID to import",
+  "copycat.noProfiles": "No profiles enabled",
   "copycat.enterIdentifier": "Enter {identifierName} identifier",
   "copycat.enterIdentifierForUpdate": "Enter the {identifierName} identifier to be used to overlay the current data",
   "copycat.callout.updated": "Updated record {xid}",
