UIIN-1436 Change label Duplicate MARC bib record to Derive new MARC bib record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -559,7 +559,7 @@
   "confirmDirtyNavigate": "Form has unsaved changes. Are you sure you want to leave?",
 
   "editInstanceMarc": "Edit in quickMARC",
-  "duplicateInstanceMarc": "Duplicate MARC bibliographic record",
+  "duplicateInstanceMarc": "Derive new MARC bibliographic record",
   "quickMarcNotAvailable": "No plugin available!",
 
   "permission.all-permissions.TEMPORARY": "Inventory: All permissions",
