--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -289,7 +289,8 @@
   "authentication": "Authentication",
   "externalIdQueryMap": "External ID query map",
   "internalIdEmbedPath": "Internal ID embed path",
-  "jobProfileId": "Job profile ID",
+  "createJobProfileId": "Job profile ID for create",
+  "updateJobProfileId": "Job profile ID for update",
   "targetOptions": "Target options",
   "externalIdentifierType": "External identifier type",
   "enabled": "Enabled",
