In "Z39.50 target profiles" settings, support the `targetOptions` field
Fixes UIIN-1445.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -292,6 +292,7 @@
   "createJobProfileId": "Job profile ID for create",
   "updateJobProfileId": "Job profile ID for update",
   "targetOptions": "Target options",
+  "button.addTargetOption": "Add target option",
   "externalIdentifierType": "External identifier type",
   "enabled": "Enabled",
   "urls": "URLs",
