UIIN-1468: Add callout after instance record is saved

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -221,6 +221,8 @@
   "itemBarcode": "Item barcode",
   "item.barcode": "Item: barcode",
   "item.requestQueue": "Request queue",
+  "item.successfullySaved": "The <strong>item</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
+  "instance.successfullySaved": "The <strong>instance</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
   "noBarcode": "No barcode",
   "itemHrid": "Item HRID",
   "itemIdentifier": "Item identifier",
