--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -222,6 +222,7 @@
   "item.barcode": "Item: barcode",
   "item.requestQueue": "Request queue",
   "item.successfullySaved": "The <strong>item</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
+  "holdingsRecord.successfullySaved": "The <strong>holdings</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
   "instance.successfullySaved": "The <strong>instance</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
   "noBarcode": "No barcode",
   "itemHrid": "Item HRID",
