--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -663,5 +663,23 @@
   "warning.item.suppressedFromDiscovery": "Warning: Item is marked suppressed from discovery",
   "discoverySuppressed": "Suppressed from discovery",
   "staffSuppressed": "Staff suppressed",
-  "hridCopied": "The instance HRID {hrid} was successfully copied to the clipboard"
+  "hridCopied": "The instance HRID {hrid} was successfully copied to the clipboard",
+
+  "acq.polNumber": "POL number",
+  "acq.orderStatus": "Order status",
+  "acq.orderStatus.Closed": "Closed",
+  "acq.orderStatus.Open": "Open",
+  "acq.orderStatus.Pending": "Pending",
+  "acq.receiptStatus": "POL receipt status",
+  "acq.receiptStatus.Awaiting Receipt": "Awaiting receipt",
+  "acq.receiptStatus.Cancelled": "Cancelled",
+  "acq.receiptStatus.Fully Received": "Fully received",
+  "acq.receiptStatus.Ongoing": "Ongoing",
+  "acq.receiptStatus.Partially Received": "Partially received",
+  "acq.receiptStatus.Pending": "Pending",
+  "acq.receiptStatus.Receipt Not Required": "Receipt not required",
+  "acq.orderSentDate": "Order sent date",
+  "acq.orderType": "Order type",
+  "acq.orderType.One-Time": "One-time",
+  "acq.orderType.Ongoing": "Ongoing"
 }
