--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -208,7 +208,8 @@
   "titleData": "Title data",
   "instanceRecord": "Instance record",
   "instanceRecordWithType": "Instance record ({instanceTypeName})",
-  "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
+  "instanceRecordTitle": "Instance • {title} •  {publisherAndDate}",
+  "instanceRecordSubtitle": "{hrid} • Last updated: {updatedDate}",
   "instanceRecordRequestsTitle": "Requests on items - {instanceResourceTitle}, {instancePublicationDate}",
   "instanceRecordRequestsSubtitle": "{count} items found",
   "contentData": "Content data",
