--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -338,7 +338,8 @@
     "noItemDeleteModal.requestMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> has a request associated and cannot be deleted until the request has been fulfilled, or the request has been cancelled. If you want to continue with the deletion of the item record, go to the Request app and clear the dependency.",
     "noItemDeleteModal.orderMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> is on order and cannot be <strong>deleted</strong> until all dependencies with the Order app have been cleared. If you want to continue with the deletion of the item record, go to the Order app and clear the dependencies.",
     "holdingRecord": "Holding record {location} {callNumber}",
-    "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
+    "instanceRecordTitle": "Instance • {title} •  {publisherAndDate}",
+    "instanceRecordSubtitle": "{hrid} • Last updated: {updatedDate}",
     "makePrimary": "Make primary",
     "holdingsNoteTypes": "Holdings note types",
     "itemNoteTypes": "Item note types",
