Refactor pane headers for instance and holdings views

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -102,6 +102,8 @@
   "updateItem": "Update item",
   "instanceTitle": "Instance: {title}.",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
+  "holdingsPaneTitle": "Holding • {title} •  {publisherAndDate}",
+  "holdingsPaneSubtitle": "Subtitle",
   "waitingForResources": "Waiting for resources",
   "fetchingMarcRecord": "Fetching MARC record",
   "viewMarcSource": "View MARC source",
