Update translations (UIIN-1311)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -49,7 +49,7 @@
   "viewRequests": "View requests ({count})",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
-  "itemDotStatus": "Item record {barcode} {status}",
+  "itemDotStatus": "Item • {barcode} • {status}",
   "instances": "Instances",
   "instance": "Instance: ",
   "holdings": "Holdings",
@@ -103,7 +103,6 @@
   "instanceTitle": "Instance: {title}.",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
   "holdingsPaneTitle": "Holding • {title} •  {publisherAndDate}",
-  "holdingsPaneSubtitle": "Subtitle",
   "waitingForResources": "Waiting for resources",
   "fetchingMarcRecord": "Fetching MARC record",
   "viewMarcSource": "View MARC source",
