--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -16,7 +16,7 @@
     "editInstance": "Edit",
     "instanceDetails": "Instance details",
     "addHoldings": "Add holdings",
-    "itemDotStatus": "Item record {barcode} {status}",
+    "itemDotStatus": "Item • {barcode} • {status}",
     "instances": "Instances",
     "instance": "Instance: ",
     "holdings": "Holdings",
@@ -279,6 +279,7 @@
     "createItem": "Create item",
     "updateItem": "Update item",
     "holdingsTitle": " Holdings: {location} > {callNumber}",
+    "holdingsPaneTitle": "Holding • {title} •  {publisherAndDate}",
     "addContributor": "Add contributor",
     "selectIdentifierType": "Select identifier type",
     "selectAlternativeTitleType": "Select alternative title type",
