Bound-with UI - proof-of-concept - do not merge

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -36,7 +36,7 @@
   "createInstance": "Create instance",
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
-  "itemRecordWithDescription": "Item record ({materialType}, {status})",
+  "itemRecordWithDescription": "Item record ({materialType}, {status}{boundWith})",
   "code": "code",
   "duplicateInstance": "Duplicate instance record",
   "save": "Save",
@@ -207,7 +207,7 @@
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
-  "instanceRecordWithType": "Instance record ({instanceTypeName})",
+  "instanceRecordWithType": "Instance record ({instanceTypeName}{boundWith})",
   "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
   "instanceRecordRequestsTitle": "Requests on items - {instanceResourceTitle}, {instancePublicationDate}",
   "instanceRecordRequestsSubtitle": "{count} items found",
