Add bound-with indicator to item view (UIIN-1518)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -37,6 +37,7 @@
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
   "itemRecordWithDescription": "Item record ({materialType}, {status})",
+  "itemRecordWithDescriptionBW": "Item record ({materialType}, {status}, Bound with)",
   "code": "code",
   "duplicateInstance": "Duplicate instance record",
   "save": "Save",
