--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,7 +103,7 @@
   "updateItem": "Update item",
   "instanceTitle": "Instance: {title}.",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
-  "holdingsPaneTitle": "Holding • {title} •  {publisherAndDate}",
+  "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
   "waitingForResources": "Waiting for resources",
   "fetchingMarcRecord": "Fetching MARC record",
   "viewMarcSource": "View MARC source",
