--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -658,7 +658,7 @@
     "item.successfullySaved": "The <strong>item</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
     "holdingsRecord.successfullySaved": "The <strong>holdings</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
     "instance.successfullySaved": "The <strong>instance</strong> - HRID <strong>{hrid}</strong> has been successfully saved.",
-    "holdingsPaneTitle": "Holding • {title} •  {publisherAndDate}",
+    "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
     "instanceRecordSubtitle": "{hrid} • Last updated: {updatedDate}",
     "instance.saveError": "Saving instance failed",
     "itemRecordWithDescriptionBW": "Item record ({materialType}, {status}, Bound with)",
