Link headers in item view (UIIN-1500)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -101,8 +101,9 @@
   "createItem": "Create item",
   "createNewItem": "Create New Item",
   "updateItem": "Update item",
-  "instanceTitle": "Instance: {title}.",
+  "instanceTitle": "Instance:",
   "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+  "holdingsLabelShort": "Holdings:",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
   "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
   "waitingForResources": "Waiting for resources",
