--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -278,6 +278,7 @@
     "typeOfRelation": "Type of relation",
     "createItem": "Create item",
     "updateItem": "Update item",
+    "holdingsLabelShort": "Holdings:",
     "holdingsTitle": " Holdings: {location} > {callNumber}",
     "addContributor": "Add contributor",
     "selectIdentifierType": "Select identifier type",
@@ -357,7 +358,7 @@
     "instanceNoteType": "Instance note type",
     "natureOfContentTerms": "Nature of content",
     "natureOfContentTerm": "Nature of content term",
-    "instanceTitle": "Instance: {title}.",
+    "instanceTitle": "Instance:",
     "items.damageStatus.damaged": "Damaged",
     "items.damageStatus.notdamaged": "Not damaged",
     "instanceNotes": "Instance notes",
