--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -358,7 +358,7 @@
     "instanceNoteType": "Instance note type",
     "natureOfContentTerms": "Nature of content",
     "natureOfContentTerm": "Nature of content term",
-    "instanceTitle": "Instance: {title}",
+    "instanceTitle": "Instance: {title}.",
     "items.damageStatus.damaged": "Damaged",
     "items.damageStatus.notdamaged": "Not damaged",
     "instanceNotes": "Instance notes",
