--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -693,5 +693,25 @@
   "receivingHistory.comment": "Comment",
   "receivingHistory.source": "Source",
   "receivingHistory.source.receiving": "Receiving",
-  "receivingHistory.source.user": "User"
+  "receivingHistory.source.user": "User",
+
+  "advancedSearch": "Advanced search",
+  "showMoreOptions": "Show more options",
+  "more": "More",
+  "noMatchingOptions": "No matching options",
+  "elasticOptionsInfo": "When autocomplete results are available use up and down arrows to review and enter to select",
+  "elasticWarning": "The entered value is not one of the suggested",
+  "parser.emptyQuery": "The query to be parsed cannot be empty",
+  "parser.eof": "Invalid search clause",
+  "parser.invalidModifier": "Invalid modifier",
+  "parser.invalidRelation": "Invalid relation within the modifier",
+  "parser.invalidSearchClause": "Invalid search clause",
+  "parser.missingCloseParenthesis": "Missing closing parenthesis",
+  "parser.strOrQuotedExpression": "Expecting string or a quoted expression",
+  "POC": "Proof of concept",
+  "electronicAccessAll": "Electronic access all fields",
+  "electronicAccessURI": "Electronic access - URI",
+  "electronicAccessPublicNote": "Electronic access - Public note",
+  "electronicAccessLinkText": "Electronic access - Link Text",
+  "electronicAccessMaterialsSpecified": "Electronic access - Materials Specified"
 }
