UIIN-1500: Add links to headers in item detail view and holdings detail view (#1439)
* Modify display of statistical codes in instance detail view (UIIN-1150)

* Link headers in item view (UIIN-1500)

* Update changelog

* Add link to holdings view header (UIIN-1501)

* Update translations

* Do it better

* Update translations

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,6 +103,7 @@
   "updateItem": "Update item",
   "instanceTitle": "Instance: {title}.",
   "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+  "holdingsLabelShort": "Holdings:",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
   "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
   "waitingForResources": "Waiting for resources",
