Display bound-with accordion in item view (UIIN-1521)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,6 +103,7 @@
   "updateItem": "Update item",
   "instanceTitle": "Instance: {title}.",
   "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+  "boundWithTitles": "Bound-with titles",
   "holdingsLabelShort": "Holdings:",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
   "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
@@ -395,6 +396,7 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
+  "instanceTitleLabel": "Instance title",
   "instanceMatchKey": "Instance match key",
   "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
