--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -1,5 +1,6 @@
 {
   "meta.title": "Inventory",
+  "appMenu.keyboardShortcuts": "Keyboard shortcuts",
   "inventory.label": "Inventory",
   "instances.columns.title": "Title",
   "instances.columns.contributors": "Contributors",
@@ -693,5 +694,12 @@
   "receivingHistory.comment": "Comment",
   "receivingHistory.source": "Source",
   "receivingHistory.source.receiving": "Receiving",
-  "receivingHistory.source.user": "User"
+  "receivingHistory.source.user": "User",
+
+  "shortcut.expandCollapse": "Expand or collapse an accordion",
+  "shortcut.close": "Close a modal or pop-up",
+  "shortcut.copy": "Copy",
+  "shortcut.cut": "Cut",
+  "shortcut.paste": "Paste",
+  "shortcut.find": "Find"
 }
