whoops, missed a comma

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -714,7 +714,7 @@
   "electronicAccessURI": "Electronic access - URI",
   "electronicAccessPublicNote": "Electronic access - Public note",
   "electronicAccessLinkText": "Electronic access - Link Text",
-  "electronicAccessMaterialsSpecified": "Electronic access - Materials Specified"
+  "electronicAccessMaterialsSpecified": "Electronic access - Materials Specified",
 
   "shortcut.expandCollapse": "Expand or collapse an accordion",
   "shortcut.close": "Close a modal or pop-up",
