UIIN-1549: Add View source for MARC Holdings

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -111,6 +111,8 @@
   "fetchingMarcRecord": "Fetching MARC record",
   "viewMarcSource": "View MARC source",
   "marcSourceRecord": "MARC bibliographic record",
+  "marcHoldingsRecord": "MARC holdings record",
+  "marcHoldingsRecord.paneTitle": "Holdings record - {title}",
   "marcSourceRecord.notFoundError": "Cannot find MARC bibliographic record for \"{name}\" instance!",
   "contributors": "Contributors",
   "addContributor": "Add contributor",
