--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -680,7 +680,7 @@
     "acq.orderType": "Order type",
     "acq.orderType.One-Time": "One-time",
     "acq.orderType.Ongoing": "Ongoing",
-    "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+    "boundWith": "and {boundWithCount, plural, one {one more title} other {other titles}}",
     "boundWithTitles": "Bound-with titles",
     "receivingHistory.receivedDate": "Receipt date",
     "receivingHistory.comment": "Comment",
