UIIN-1521: Add bound-with accordion to item view (#1456)
* Modify display of statistical codes in instance detail view (UIIN-1150)

* Display bound-with accordion in item view (UIIN-1521)

* Add ItemView tests

* Update changelog

* Linting

* Fix translation for UIIN-1523

* Remove intl mock

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,7 +103,8 @@
   "createNewItem": "Create New Item",
   "updateItem": "Update item",
   "instanceTitle": "Instance: {title}.",
-  "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+  "boundWith": "and {boundWithCount, plural, one {one more title} other {other titles}}",
+  "boundWithTitles": "Bound-with titles",
   "holdingsLabelShort": "Holdings:",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
   "holdingsPaneTitle": "Holdings • {location} • {callNumber}",
@@ -398,6 +399,7 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
+  "instanceTitleLabel": "Instance title",
   "instanceMatchKey": "Instance match key",
   "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
