--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -133,6 +133,7 @@
     "itemPublicNote": "Item public note",
     "holdingsHrid": "Holdings HRID",
     "instanceHrid": "Instance HRID",
+    "instanceTitleLabel": "Instance title",
     "viewSource": "View source",
     "itemHrid": "Item HRID",
     "administrativeData": "Administrative data",
@@ -679,7 +680,8 @@
     "acq.orderType": "Order type",
     "acq.orderType.One-Time": "One-time",
     "acq.orderType.Ongoing": "Ongoing",
-    "boundWith": "and {boundWithCount, plural, one {one more title} other {and other titles}}",
+    "boundWith": "and {boundWithCount, plural, one {one more title} other {other titles}}",
+    "boundWithTitles": "Bound-with titles",
     "receivingHistory.receivedDate": "Receipt date",
     "receivingHistory.comment": "Comment",
     "receivingHistory.source": "Source",
