UIIN-1632 Update Received piece table columns

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -241,6 +241,7 @@
   "accessionNumber": "Accession number",
   "status": "Status",
   "loanTypeTemporary": "Temporary loan type",
+  "caption": "Caption",
   "enumeration": "Enumeration",
   "enumerationData": "Enumeration data",
   "volume": "Volume",
