UIIN-1625 Update Instance record Actions menu

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -1,6 +1,7 @@
 {
   "meta.title": "Inventory",
   "appMenu.keyboardShortcuts": "Keyboard shortcuts",
+  "quickMARC.label": "quickMARC",
   "inventory.label": "Inventory",
   "instances.columns.title": "Title",
   "instances.columns.contributors": "Contributors",
@@ -40,13 +41,14 @@
   "itemRecordWithDescription": "Item record ({materialType}, {status})",
   "itemRecordWithDescriptionBW": "Item record ({materialType}, {status}, Bound with)",
   "code": "code",
-  "duplicateInstance": "Duplicate instance record",
+  "duplicateInstance": "Duplicate instance",
   "save": "Save",
   "saveAndClose": "Save & close",
   "cancel": "Cancel",
   "confirm": "Confirm",
+  "edit": "Edit",
   "newInstance": "New instance",
-  "editInstance": "Edit",
+  "editInstance": "Edit instance",
   "moveItems": "Move holdings/items to another instance",
   "viewRequests": "View requests",
   "instanceDetails": "Instance details",
@@ -575,7 +577,7 @@
   "precedingField.connected": "Connected",
   "confirmDirtyNavigate": "Form has unsaved changes. Are you sure you want to leave?",
 
-  "editInstanceMarc": "Edit in quickMARC",
+  "editInstanceMarc": "Edit MARC bibliographic record",
   "duplicateInstanceMarc": "Derive new MARC bibliographic record",
   "quickMarcNotAvailable": "No plugin available!",
 
@@ -650,7 +652,7 @@
   "actions": "Actions",
   "showColumns": "Show columns",
   "copycat.import": "Import",
-  "copycat.reimport": "Overlay",
+  "copycat.reimport": "Overlay source bibliographic record",
   "copycat.noProfiles": "No profiles enabled",
   "copycat.enterIdentifier": "Enter {identifierName} identifier",
   "copycat.enterIdentifierForUpdate": "Enter the {identifierName} identifier to be used to overlay the current data",
