--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -524,6 +524,9 @@
   "saveInstancesUIIDS": "Save instances UUIDs",
   "saveInstancesUIIDS.info": "Request to save instances UUIDs has been received. File download may take a few minutes.",
   "saveInstancesUIIDS.error": "Error occurred while saving instances UUIDs. Please try again.",
+  "saveHoldingsUIIDS": "Save Holdings UUIDs",
+  "saveHoldingsUIIDS.info": "Request to save holdings UUIDs has been received. File download may take a few minutes.",
+  "saveHoldingsUIIDS.error": "Error occurred while saving holdings UUIDs. Please try again.",
   "saveInstancesCQLQuery": "Save instances CQL query",
   "exportInstancesInMARC": "Export instances (MARC)",
   "exportInstancesInMARCLimitExceeded": "Selected record limit of {count, number} exceeded",
