--- a/translations/ui-inventory/es_419.json
+++ b/translations/ui-inventory/es_419.json
@@ -638,7 +638,7 @@
     "remote.confirmation.heading": "Eliminar del almacenamiento remoto.",
     "remote.confirmation.message": "¿Está seguro que desea eliminar {something} del almacenamiento remoto?",
     "remote.warning.common": "Para eliminar {something} del almacenamiento remoto, ejecute un informe de excepción o comuníquelo directamente a su ubicación de almacenamiento remoto.",
-    "remote.warning.titles": "Esto incluye {count, plural, =0 {<strong>no<strong> títulos} one {<strong>#</strong> títulos} other {<strong>#</strong> títulos}}.",
+    "remote.warning.titles": "Esto incluye {count, plural, =0 {<strong>no</strong> títulos} one {<strong>#</strong> títulos} other {<strong>#</strong> títulos}}.",
     "remote.holdings": "Las existencias.",
     "remote.items": "{count, plural, one {este item} other {<strong>#</strong> items}}",
     "createJobProfileId": "ID de perfil de trabajo para crear (registros)",
