--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -525,7 +525,7 @@
   "saveInstancesUIIDS": "Save instances UUIDs",
   "saveInstancesUIIDS.info": "Request to save instances UUIDs has been received. File download may take a few minutes.",
   "saveInstancesUIIDS.error": "Error occurred while saving instances UUIDs. Please try again.",
-  "saveHoldingsUIIDS": "Save Holdings UUIDs",
+  "saveHoldingsUIIDS": "Save holdings UUIDs",
   "saveHoldingsUIIDS.info": "Request to save holdings UUIDs has been received. File download may take a few minutes.",
   "saveHoldingsUIIDS.error": "Error occurred while saving holdings UUIDs. Please try again.",
   "saveInstancesCQLQuery": "Save instances CQL query",
