--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -717,5 +717,8 @@
   "shortcut.copy": "Copy",
   "shortcut.cut": "Cut",
   "shortcut.paste": "Paste",
-  "shortcut.find": "Find"
+  "shortcut.find": "Find",
+  "showMoreOptions": "Show more options",
+  "more": "More",
+  "noMatchingOptions": "No matching options"
 }
